# lord-scoffer

./: .env.exemplo  .gitignore  pyproject.toml
src/lord_scoffer/config/: settings.py
src/lord_scoffer/core/: agent.py  message.py  prompts.py
