[project]
name = "lord-scoffer"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Silveira",email = "silveira.julio@gmai.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "lord_scoffer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
